# MBA_MLOPS

./: .dvcignore  .gitignore  Dockerfile.mlflow  HISTÓRICO DE DESENVOLVIMENTO — QuantumFinance.md  LEIA-ME APÓS O README.md  LICENSE  Makefile  README (1).md  README.md  api.py  api_log.txt  apoio.ipynb  arquitetura.mmd  cf_app.py  cf_run_api.sh  cf_run_full_stack.sh  cf_service.py  cf_transform.py  converter.py  docker-compose.yml  mapping.py  payload.json  pyproject.toml  requirements.txt  start_services.sh  streamlit_app.py  streamlit_app_V1.py  streamlit_log.txt  test_api.py  test_api_local.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.mlruns/0/: meta.yaml
.obsidian/: app.json  workspace.json
container_solução/: Dockerfile  docker-compose.yml  requirements.txt  run_container.sh
data/raw/: dummy.txt.dvc
docs/: mkdocs.yml
mba_mlops_faty7098/: __init__.py  dataset.py  features.py  plots.py
notebooks/: 3a_adequacao.ipynb  EDA_pre-processamento.ipynb  adequacao_desenvolimento.ipynb  api_FastAPI.ipynb  carregamento_dados.ipynb  desenvolvimento_Streamlit.ipynb  desenvovimento_v1.ipynb  feature_engineering_curadoria.ipynb  pipeline_preprocessing_v1.2.joblib  runs_desenvolvimento.ipynb
references/: PROTOCOLO_V5.4_UNIFICADO.md  PROTOCOLO_V5.5_FINAL.md  PROTOCOLO_V5.5_FINAL_COM_BLOQUEIO.md  PROTOCOLO_V5.6_COM_RESTRICAO_DE_CAMINHOS.md  PROTOCOLO_V5.6_COM_RESTRICAO_DE_CAMINHOS_REVISADO (1).md  PROTOCOLO_V5.6_COM_RESTRICAO_DE_CAMINHOS_REVISADO (2).md  PROTOCOLO_V5.6_COM_RESTRICAO_DE_CAMINHOS_REVISADO.md  PROTOCOLO_V6.1_UNIFICADO_COMPILADO.md
(+180 files in other folders)
