[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mba_mlops_faty7098"
version = "0.0.1"
description = "CADEIRA MLOPS FIAP 9DTSC"
authors = [
  { name = "WRM" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.3"


[tool.ruff]
line-length = 99
src = ["mba_mlops_faty7098"]
include = ["pyproject.toml", "mba_mlops_faty7098/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mba_mlops_faty7098"]
force-sort-within-sections = true

